CORAL-104 use ResourceRefs for building resourceByParent and resourceByParentAndName auxiliary mappings. Introduced generics and other Java 5 goodies.